--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
         with:
           fetch-depth: 0
           submodules: 'true'
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.3.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
       - name: zip
         uses: montudor/action-zip@v1
         with:
@@ -21,7 +26,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{github.token}}
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./
           asset_name: foo.zip
           asset_content_type: application/zip
