--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,24 +9,20 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          submodules: 'true'
       - name: Get release
         id: get_release
         uses: bruceadams/get-release@v1.3.2
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: zip
-        uses: montudor/action-zip@v1
-        with:
-          args: zip -r foo.zip windows
+        run: |
+          zip -r foo.zip windows
       - name: upload extension file
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{github.token}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: ./
+          asset_path: ./foo.zip
           asset_name: foo.zip
           asset_content_type: application/zip
