--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Extract tag name
-        id: extract_tag
-        run: echo "::set-output name=tag::TEST"
+      - name: Extract version
+        id: extract_version
+        run: echo "::set-output name=version::TEST"
+
+      - name: Get filename
+        id: get_filename
+        run: echo "::set-output name=name::policy_templates_${{github.event.release.tag_name}}.zip"
 
       - name: Zip files
         run: |
-          tag_name=${{ steps.extract_tag.outputs.tag }}
-          zip -r "${tag_name}.zip" .
+          zip -r "${{ steps.get_filename.outputs.name }}" .
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
@@ -27,6 +30,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./${{ steps.extract_tag.outputs.tag }}.zip
-          asset_name: ${{ steps.extract_tag.outputs.tag }}.zip
+          asset_path: ./${{ steps.get_filename.outputs.name }}
+          asset_name: ${{ steps.get_filename.outputs.name }}
           asset_content_type: application/zip
