--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Extract version
-        id: extract_version
+        id: get_version
         run: echo "::set-output name=version::TEST"
+
+      - name: Update XML attribute
+        run: |
+          version_number=${{ steps.get_version.outputs.version }}
+          xmlstarlet ed --inplace -u '//policyDefinitions[@revision]' -v "$version_number" windows/firefox.admx
 
       - name: Get filename
         id: get_filename
